# foursquare-data-loading

./: .bumpversion.cfg  README.md  environment.yml  make.cmd  pyproject.toml
arcgis/: foursquare-data-loading.aprx  foursquare-geoenrichment-loading.tbx  places.lyrx
arcgis/.backups/: foursquare-data-loading.aprx
arcgis/GpMessages/: 10650734967300  10678259774900  24292000522300  24332218447400  24347611342600  24358133585300  24371454082400  24377997605300  24383646325100  28793354252200  310830391200  328557678800  337488799200  343278498200  349269390400  354519871600  539855350068900  78628349108400  8938562324900  9248378984900
docsrc/: conf.py  index.rst
notebooks/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  convert-census-blk-patch-Copy1.ipynb  convert-census-blk-patch.ipynb  dan-data.ipynb  expand-schema-csv.ipynb  notebook-template.ipynb  update-xlsx.ipynb  zipping.ipynb
scripts/: download_basemaps_parquet.cmd  download_geoenrichment_parquet.cmd  download_make_foursquare_basemaps_data.py  download_make_foursquare_geoenrichment_data.py  download_parquet_all.cmd  download_qa_parquet.cmd  download_sample_parquet.cmd  foursquare_conversion_config.ini  make_foursquare_basemaps_data.py  make_foursquare_geoenrichment_data.py  make_foursquare_qa_data.py  null
src/foursquare_data_loading/: __init__.py
src/foursquare_data_loading/utils/: __init__.py  logging_utils.py
